<?xml version="1.0" encoding="utf-8"?>

<!-- Este es el layout que muestra el fragment de configuración de idioma -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <!-- TextView para indicar la acción al usuario -->
    <TextView
        android:id="@+id/textViewLanguage"
        style="@style/TextViewStyleTittle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/choose_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ImageView para mostrar una imagen decorativa -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="273dp"
        android:layout_height="483dp"
        android:src="@drawable/plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Grupo de botones de opción de idioma -->
    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLanguage">
        <!-- Boton para la opción de idioma "Inglés" -->
        <RadioButton
            android:id="@+id/radioButton_en"
            style="@style/TextViewStyleContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_en" />

        <!-- Boton para la opción de idioma "Español" -->
        <RadioButton
            android:id="@+id/radioButton_es"
            style="@style/TextViewStyleContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/language_es" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>